edgevox-onnx/c-api/c-api.h

/** @brief Configuration for offline speech denoising. */
typedef struct EdgevoxOnnxOfflineSpeechDenoiserConfig {
  /** Model configuration. */
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOfflineSpeechDenoiserConfig;
/** @brief Opaque offline speech denoiser handle. */
typedef struct EdgevoxOnnxOfflineSpeechDenoiser EdgevoxOnnxOfflineSpeechDenoiser;
/**
 * @brief Create an offline speech denoiser.
 *
 * Example using `gtcrn_simple.onnx`:
 *
 * @code
 * EdgevoxOnnxOfflineSpeechDenoiserConfig config;
 * memset(&config, 0, sizeof(config));
 * config.model.gtcrn.model = "./gtcrn_simple.onnx";
 * @endcode
 *
 * @param config Offline denoiser configuration.
 * @return A newly allocated denoiser on success, or NULL on error. Free it
 *         with EdgevoxOnnxDestroyOfflineSpeechDenoiser().
 * @see EdgevoxOnnxDestroyOfflineSpeechDenoiser
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeechDenoiser *
EdgevoxOnnxCreateOfflineSpeechDenoiser(
    const EdgevoxOnnxOfflineSpeechDenoiserConfig *config);
/**
 * @brief Destroy an offline speech denoiser.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeechDenoiser().
 * @see EdgevoxOnnxCreateOfflineSpeechDenoiser
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineSpeechDenoiser(
    const EdgevoxOnnxOfflineSpeechDenoiser *sd);
/**
 * @brief Return the expected sample rate for the denoiser.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeechDenoiser().
 * @return Required input sample rate in Hz.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeechDenoiserGetSampleRate(
    const EdgevoxOnnxOfflineSpeechDenoiser *sd);
/**
 * @brief Denoised audio returned by offline or online speech enhancement APIs.
 *
 * Free this object with EdgevoxOnnxDestroyDenoisedAudio().
 */
typedef struct EdgevoxOnnxDenoisedAudio {
  /** Output samples in the range [-1, 1]. */
  const float *samples;
  /** Number of output samples. */
  int32_t n;
  /** Output sample rate in Hz. */
  int32_t sample_rate;
} EdgevoxOnnxDenoisedAudio;
/**
 * @brief Run offline speech denoising on a complete waveform.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOfflineSpeechDenoiser().
 * @param samples Input mono PCM samples normalized to [-1, 1].
 * @param n Number of input samples.
 * @param sample_rate Input sample rate in Hz.
 * @return A newly allocated denoised waveform. Free it with
 *         EdgevoxOnnxDestroyDenoisedAudio().
 *
 * @code
 * const EdgevoxOnnxDenoisedAudio *denoised =
 *     EdgevoxOnnxOfflineSpeechDenoiserRun(sd, wave->samples, wave->num_samples,
 *                                        wave->sample_rate);
 * EdgevoxOnnxWriteWave(denoised->samples, denoised->n, denoised->sample_rate,
 *                     "./enhanced.wav");
 * EdgevoxOnnxDestroyDenoisedAudio(denoised);
 * @endcode
 */
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOfflineSpeechDenoiserRun(const EdgevoxOnnxOfflineSpeechDenoiser *sd,
                                   const float *samples, int32_t n,
                                   int32_t sample_rate);
/**
 * @brief Destroy denoised audio returned by a speech enhancement API.
 *
 * @param p A pointer returned by EdgevoxOnnxOfflineSpeechDenoiserRun(),
 *          EdgevoxOnnxOnlineSpeechDenoiserRun(), or
 *          EdgevoxOnnxOnlineSpeechDenoiserFlush().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyDenoisedAudio(
    const EdgevoxOnnxDenoisedAudio *p);
// =========================================================================
// For streaming speech enhancement
// =========================================================================
/** @brief Configuration for streaming speech denoising. */
typedef struct EdgevoxOnnxOnlineSpeechDenoiserConfig {
  /** Model configuration. */
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOnlineSpeechDenoiserConfig;
/** @brief Opaque online speech denoiser handle. */
typedef struct EdgevoxOnnxOnlineSpeechDenoiser EdgevoxOnnxOnlineSpeechDenoiser;
/**
 * @brief Create an online speech denoiser.
 *
 * @param config Online denoiser configuration.
 * @return A newly allocated denoiser on success, or NULL on error. Free it
 *         with EdgevoxOnnxDestroyOnlineSpeechDenoiser().
 * @see EdgevoxOnnxDestroyOnlineSpeechDenoiser
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineSpeechDenoiser *
EdgevoxOnnxCreateOnlineSpeechDenoiser(
    const EdgevoxOnnxOnlineSpeechDenoiserConfig *config);
/**
 * @brief Destroy an online speech denoiser.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOnlineSpeechDenoiser().
 * @see EdgevoxOnnxCreateOnlineSpeechDenoiser
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineSpeechDenoiser(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
/**
 * @brief Return the expected input sample rate for the online denoiser.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOnlineSpeechDenoiser().
 * @return Required input sample rate in Hz.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOnlineSpeechDenoiserGetSampleRate(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
/**
 * @brief Return the recommended chunk size in samples for streaming input.
 *
 * Example programs feed audio to the online denoiser in this chunk size.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOnlineSpeechDenoiser().
 * @return Frame shift in samples.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamples(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
/**
 * @brief Process one chunk of streaming audio.
 *
 * This function is not thread-safe. It may return NULL when not enough input
 * has been accumulated to produce denoised output yet.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOnlineSpeechDenoiser().
 * @param samples Input chunk normalized to [-1, 1].
 * @param n Number of input samples.
 * @param sample_rate Input sample rate in Hz.
 * @return A newly allocated denoised chunk, or NULL if no output is available
 *         yet. Free non-NULL results with EdgevoxOnnxDestroyDenoisedAudio().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOnlineSpeechDenoiserRun(const EdgevoxOnnxOnlineSpeechDenoiser *sd,
                                  const float *samples, int32_t n,
                                  int32_t sample_rate);
/**
 * @brief Flush buffered samples and reset the online denoiser.
 *
 * This also resets the denoiser so it can be reused for a new utterance.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOnlineSpeechDenoiser().
 * @return A newly allocated denoised chunk, or NULL if no buffered output
 *         remains. Free non-NULL results with EdgevoxOnnxDestroyDenoisedAudio().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOnlineSpeechDenoiserFlush(const EdgevoxOnnxOnlineSpeechDenoiser *sd);
/**
 * @brief Reset an online denoiser so it can process a new stream.
 *
 * @param sd A pointer returned by EdgevoxOnnxCreateOnlineSpeechDenoiser().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineSpeechDenoiserReset(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);