edgevox-onnx/c-api/cxx-api.h

/** @brief GTCRN speech denoiser model configuration. */
struct OfflineSpeechDenoiserGtcrnModelConfig {
  /** Model ONNX file. */
  std::string model;
};
/** @brief DPDFNet speech denoiser model configuration. */
struct OfflineSpeechDenoiserDpdfNetModelConfig {
  /** Model ONNX file. */
  std::string model;
};
/**
 * @brief Speech denoiser model configuration.
 *
 * Configure exactly one model family. If multiple model families are set, one
 * is chosen and the choice is implementation-defined.
 */
struct OfflineSpeechDenoiserModelConfig {
  /** GTCRN configuration. */
  OfflineSpeechDenoiserGtcrnModelConfig gtcrn;
  /** DPDFNet configuration. */
  OfflineSpeechDenoiserDpdfNetModelConfig dpdfnet;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Enable verbose debug logging. */
  bool debug = false;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
};
/** @brief Configuration for offline speech denoising. */
struct OfflineSpeechDenoiserConfig {
  /** Model configuration. */
  OfflineSpeechDenoiserModelConfig model;
};
/** @brief Denoised waveform returned by speech enhancement wrappers. */
struct DenoisedAudio {
  /** Output samples normalized to `[-1, 1]`. */
  std::vector<float> samples;
  /** Output sample rate in Hz. */
  int32_t sample_rate = 0;
};
/** @brief Configuration for online speech denoising. */
struct OnlineSpeechDenoiserConfig {
  /** Model configuration. */
  OfflineSpeechDenoiserModelConfig model;
};